--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!doctype html>
 <html lang="lt">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AutoKOPERS - Greitas Automobilio Finansavimas be Stresų | Kaunas</title>
-    <meta name="description" content="AutoKOPERS - greitas automobilio finansavimas be stresų. Platus naudotų automobilių pasirinkimas su patikima garantija Kaune. Lizingas ir automobilio supirkimas." />
-    <meta name="keywords" content="automobilių finansavimas, naudoti automobiliai, automobilio lizingas, auto supirkimas, Kaunas" />
-    <meta name="author" content="AutoKOPERS" />
+<head>
+  <meta charset="utf-8" />
+  <title>Autokopers – Automobilių Pardavimas ir Finansavimas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
 
-    <meta property="og:title" content="AutoKOPERS - Greitas Automobilio Finansavimas be Stresų" />
-    <meta property="og:description" content="Platus naudotų automobilių pasirinkimas su patikima garantija Kaune. Greitas lizingas ir auto supirkimas." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Open Graph / Social preview -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.autokopers.lt/" />
+  <meta property="og:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
+  <meta property="og:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
+  <meta property="og:image" content="/autokopers-social.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
+  <meta name="twitter:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
+  <meta name="twitter:image" content="/autokopers-social.jpg" />
+</head>
+<body>
+  <h1>Autokopers</h1>
+  <p>Šis failas paruoštas tik OG testui. Svarbiausia – <code>autokopers-social.jpg</code> ir meta žymės <code>&lt;head&gt;</code> bloke.</p>
+</body>
 </html>
