--- a/index.html
+++ b/index.html
@@ -1,25 +1,14 @@
 <!doctype html>
 <html lang="lt">
 <head>
-  <meta charset="utf-8" />
-  <title>Autokopers – Automobilių Pardavimas ir Finansavimas</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
+ <meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.autokopers.lt/" />
+<meta property="og:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
+<meta property="og:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
+<meta property="og:image" content="https://www.autokopers.lt/autokopers-social.jpg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 
-  <!-- Open Graph / Social preview -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.autokopers.lt/" />
-  <meta property="og:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
-  <meta property="og:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
-  <meta property="og:image" content="/autokopers-social.jpg" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
-  <meta name="twitter:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
-  <meta name="twitter:image" content="/autokopers-social.jpg" />
 </head>
 <body>
   <h1>Autokopers</h1>
