--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="lt">
 <head>
- <meta property="og:type" content="website" />
+<!-- Open Graph / Facebook / Messenger -->
+<meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.autokopers.lt/" />
 <meta property="og:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
 <meta property="og:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
@@ -9,6 +10,11 @@
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
+<meta name="twitter:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
+<meta name="twitter:image" content="https://www.autokopers.lt/autokopers-social.jpg" />
 </head>
 <body>
   <h1>Autokopers</h1>
