--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!doctype html>
 <html lang="lt">
-<head>
-<!-- Open Graph / Facebook / Messenger -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.autokopers.lt/" />
-<meta property="og:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
-<meta property="og:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
-<meta property="og:image" content="https://www.autokopers.lt/autokopers-social.jpg" />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Autokopers – Automobilių Pardavimas ir Finansavimas</title>
 
-<!-- Twitter -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
-<meta name="twitter:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
-<meta name="twitter:image" content="https://www.autokopers.lt/autokopers-social.jpg" />
-</head>
-<body>
-  <h1>Autokopers</h1>
-  <p>Šis failas paruoštas tik OG testui. Svarbiausia – <code>autokopers-social.jpg</code> ir meta žymės <code>&lt;head&gt;</code> bloke.</p>
-</body>
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.autokopers.lt/" />
+    <meta property="og:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
+    <meta property="og:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
+    <meta property="og:image" content="/autokopers-social.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
+    <meta name="twitter:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
+    <meta name="twitter:image" content="/autokopers-social.jpg" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <!-- Jei pas tave įėjimo failas yra main.jsx – perrašyk į /src/main.jsx -->
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
