--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
+<ht<!doctype html>
 <html lang="lt">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Autokopers – Automobilių Pardavimas ir Finansavimas</title>
 
-    <!-- Open Graph -->
+    <!-- Open Graph / Facebook / Messenger -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.autokopers.lt/" />
     <meta property="og:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
@@ -19,10 +20,14 @@
     <meta name="twitter:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
     <meta name="twitter:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
     <meta name="twitter:image" content="/autokopers-social.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
     <div id="root"></div>
-    <!-- Jei pas tave įėjimo failas yra main.jsx – perrašyk į /src/main.jsx -->
+
+    <!-- ⚙️ Pagrindinis įėjimo failas (pakeisk .tsx į .jsx jei reikia) -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
