--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<ht<!doctype html>
 <html lang="lt">
   <head>
     <meta charset="UTF-8" />
@@ -21,13 +20,12 @@
     <meta name="twitter:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
     <meta name="twitter:image" content="/autokopers-social.jpg" />
 
-    <!-- Favicon -->
+    <!-- (neprivaloma) favicon, jei turi -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
     <div id="root"></div>
-
-    <!-- ⚙️ Pagrindinis įėjimo failas (pakeisk .tsx į .jsx jei reikia) -->
+    <!-- svarbu: kadangi įėjimo failas yra TSX -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
