--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!doctype html>
 <html lang="lt">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Autokopers – Automobilių Pardavimas ir Finansavimas</title>
+    <meta name="description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
 
-    <!-- Open Graph / Facebook / Messenger -->
+    <!-- Open Graph (Facebook, LinkedIn, Viber, WhatsApp) -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.autokopers.lt/" />
+    <meta property="og:site_name" content="Autokopers" />
     <meta property="og:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
     <meta property="og:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
-    <meta property="og:image" content="/autokopers-social.jpg" />
+    <meta property="og:image" content="https://www.autokopers.lt/autokopers-social.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
-    <!-- Twitter -->
+    <!-- Twitter kortelės -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.autokopers.lt/" />
     <meta name="twitter:title" content="Autokopers – Automobilių Pardavimas ir Finansavimas" />
     <meta name="twitter:description" content="Greitas automobilių finansavimas be streso. Patikimi sprendimai su Autokopers." />
-    <meta name="twitter:image" content="/autokopers-social.jpg" />
+    <meta name="twitter:image" content="https://www.autokopers.lt/autokopers-social.jpg" />
 
-    <!-- (neprivaloma) favicon, jei turi -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicons -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
+
   <body>
     <div id="root"></div>
+
     <!-- svarbu: kadangi įėjimo failas yra TSX -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
